Drop non-string labels if connected to older APM Server