@@ -27,12 +27,12 @@ package co.elastic.apm.agent.report;
 import co.elastic.apm.agent.configuration.SpyConfiguration;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 import co.elastic.apm.agent.impl.ElasticApmTracerBuilder;
+import co.elastic.apm.agent.util.Version;
 import com.github.tomakehurst.wiremock.core.WireMockConfiguration;
 import com.github.tomakehurst.wiremock.junit.WireMockRule;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
-import org.mockito.Mockito;
 import org.stagemonitor.configuration.ConfigurationRegistry;
 
 import java.io.FileNotFoundException;
@@ -41,9 +41,10 @@ import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
+import static com.github.tomakehurst.wiremock.client.ResponseDefinitionBuilder.okForJson;
 import static com.github.tomakehurst.wiremock.client.WireMock.get;
 import static com.github.tomakehurst.wiremock.client.WireMock.getRequestedFor;
 import static com.github.tomakehurst.wiremock.client.WireMock.notFound;
@@ -51,6 +52,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.ok;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.Mockito.doReturn;
 
 public class ApmServerClientTest {
 
@@ -67,18 +69,20 @@ public class ApmServerClientTest {
     public void setUp() throws MalformedURLException {
         URL url1 = new URL("http", "localhost", apmServer1.port(), "/");
         URL url2 = new URL("http", "localhost", apmServer2.port(), "/");
+        apmServer1.stubFor(get(urlEqualTo("/")).willReturn(okForJson(Map.of("version", "6.7.0-SNAPSHOT"))));
+        apmServer1.stubFor(get(urlEqualTo("/test")).willReturn(notFound()));
+        apmServer1.stubFor(get(urlEqualTo("/not-found")).willReturn(notFound()));
+        apmServer2.stubFor(get(urlEqualTo("/")).willReturn(okForJson(Map.of("version", "7.3.0-RC1"))));
+        apmServer2.stubFor(get(urlEqualTo("/test")).willReturn(ok("hello from server 2")));
+        apmServer2.stubFor(get(urlEqualTo("/not-found")).willReturn(notFound()));
+
         config = SpyConfiguration.createSpyConfig();
+        reporterConfiguration = config.getConfig(ReporterConfiguration.class);
+        doReturn(List.of(url1, url2)).when(reporterConfiguration).getServerUrls();
         tracer = new ElasticApmTracerBuilder()
             .configurationRegistry(config)
             .build();
-        reporterConfiguration = tracer.getConfig(ReporterConfiguration.class);
 
-        Mockito.when(reporterConfiguration.getServerUrls()).thenReturn(Arrays.asList(url1, url2));
-
-        apmServer1.stubFor(get(urlEqualTo("/test")).willReturn(notFound()));
-        apmServer1.stubFor(get(urlEqualTo("/not-found")).willReturn(notFound()));
-        apmServer2.stubFor(get(urlEqualTo("/test")).willReturn(ok("hello from server 2")));
-        apmServer2.stubFor(get(urlEqualTo("/not-found")).willReturn(notFound()));
         apmServerClient = new ApmServerClient(reporterConfiguration, tracer.getConfig(ReporterConfiguration.class).getServerUrls());
     }
 
@@ -173,6 +177,17 @@ public class ApmServerClientTest {
 
         List<URL> updatedServerUrls = apmServerClient.getServerUrls();
 
-        assertThat(updatedServerUrls).isEqualTo(Arrays.asList(tempUrl));
+        assertThat(updatedServerUrls).isEqualTo(List.of(tempUrl));
+    }
+
+    @Test
+    public void testApmServerVersion() throws IOException {
+        assertThat(apmServerClient.isAtLeast(new Version("6.7.0"))).isTrue();
+        assertThat(apmServerClient.isAtLeast(new Version("6.7.1"))).isFalse();
+        assertThat(apmServerClient.supportsNonStringLabels()).isTrue();
+        apmServer1.stubFor(get(urlEqualTo("/")).willReturn(okForJson(Map.of("version", "6.6.1"))));
+        config.save("server_urls", new URL("http", "localhost", apmServer1.port(), "/").toString(), SpyConfiguration.CONFIG_SOURCE_NAME);
+        assertThat(apmServerClient.supportsNonStringLabels()).isFalse();
+
     }
 }
